<?xml version="1.0"?>
<package>
  <name>ras_lab1_controllers</name>
  <version>0.0.0</version>
  <description>The ras_lab1_controllers package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>

 
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
